<resources>
    <string name="app_name">workout-manager</string>
    <string name="workouts_manager_app">Workouts Manager App</string>
    <string name="email_address">Email Address</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="password_txt">Password</string>
    <string name="login_txt">Login</string>
    <string name="register">Register</string>
    <string name="id"></string>
    <string name="back_to_login">Back to Login</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="button">Create Workout</string>
    <string name="your_activities">Your Workouts</string>
    <string name="string_your_activities">Your Workouts</string>
    <string name="enter_id">Enter ID</string>
    <string name="full_name">Full Name</string>
    <string name="workout_id">Workout ID:</string>
    <string name="workout_title">Workout Title:</string>
    <string name="type_shoulders_legs_arms_back_chest_etc">Type: (Shoulders, Legs, Arms, Back, Chest, Aerobic, etc...)</string>
    <string name="workout_details">Workout Details:</string>
    <string name="number_of_sets">Number Of Sets or Duration</string>
    <string name="add_activity">Add Workout</string>
    <string name="sign_out_w">Sign Out</string>
    <string name="textview">Enter Weight (in KG)</string>
    <string name="calculate_bmi_bmr">Calculate BMI / BMR</string>
    <string name="enter_height">Enter Height (in CM)</string>
    <string name="enter_age">Enter Age</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="bmr_enter_height">Enter Height (in CM)</string>
    <string name="bmr_enter_weight">Enter Weight (in KG)</string>
    <string name="result_bmi">Result</string>
    <string name="calculate_bmr_btn">Calculate BMR</string>
    <string name="result_bmr">Result</string>
    <string name="values_AFR">Calculate BMI</string>
    <string name="calculate_bmi_values">Calculate BMI Values</string>
</resources>